--- a/pages/agenda/beginners.html
+++ b/pages/agenda/beginners.html
@@ -112,7 +112,7 @@
                 <li>HTML5 files upload.</li>
             </ol>
         </li>
-        <li><h3><a class="active" href="../themes/beginners/CSS_Intro/CSS_Intro.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down">Въведение в CSS</span><span class="hours">4</span></h3>
+        <li id="CSS_Intro"><h3><a class="active" href="../themes/beginners/CSS_Intro/CSS_Intro.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down">Въведение в CSS</span><span class="hours">4</span></h3>
             <ol class="iep_syllabus_sub_themes">
                 <li>Какво е CSS и как допълва HTML.</li>
                 <li>Inline, internal или external CSS?</li>
@@ -120,7 +120,7 @@
                 <li>Наследяване на CSS правила. Какво е "каскадното" в CSS ?</li>
             </ol>
         </li>
-        <li><h3><a class="active" href="../themes/beginners/CSS_Selectors_1/CSS_Selectors_part1.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down">Селектори в CSS3 - Част1</span><span class="hours">2</span></h3>
+        <li id="CSS_Selectors_part1"><h3><a class="active" href="../themes/beginners/CSS_Selectors_1/CSS_Selectors_part1.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down">Селектори в CSS3 - Част1</span><span class="hours">2</span></h3>
             <ol class="iep_syllabus_sub_themes">
                 <li>Селектори за елементи.</li>
                 <li>Селектори за class и id.</li>
@@ -128,7 +128,7 @@
                 <li>CSS комбинатори.</li>
             </ol>
         </li>
-        <li><h3><a class="active" href="../themes/beginners/CSS_BasicProperties/CSS_Basic_Properties.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down">Стилизиране на елементите в страницата чрез CSS3</span><span class="hours">2</span></h3>
+        <li id="CSS_Basic_Properties"><h3><a class="active" href="../themes/beginners/CSS_BasicProperties/CSS_Basic_Properties.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down">Стилизиране на елементите в страницата чрез CSS3</span><span class="hours">2</span></h3>
             <ol class="iep_syllabus_sub_themes">
                 <li>Запознаване с основните CSS свойства за оформление на текст, шрифт, цвят, фон и рамка.</li>
             </ol>
