--- a/pages/themes/beginners/CSS_Selectors_1/CSS_Selectors_part1.html
+++ b/pages/themes/beginners/CSS_Selectors_1/CSS_Selectors_part1.html
@@ -56,7 +56,7 @@
 </head>
 <body>
     <div class="reveal default center" data-transition-speed="default" data-background-transition="default">
-        <a class="home_link" href="../../../agenda/beginners.html"><i class="fa fa-home"></i></a>
+        <a class="home_link" href="../../../agenda/beginners.html#CSS_Selectors_part1" target="_top"><i class="fa fa-home"></i></a>
         <div class="footer theme_switch">
             <a href="#" onclick="document.getElementById('theme').setAttribute('href','../../../../outfit/reveal.js/css/theme/white.css'); return false;">White</a>
             <a href="#" onclick="document.getElementById('theme').setAttribute('href','../../../../outfit/reveal.js/css/theme/league.css'); return false;">League</a>
