--- a/pages/themes/beginners/HTML_InputForms/HTML5_input_forms.html
+++ b/pages/themes/beginners/HTML_InputForms/HTML5_input_forms.html
@@ -33,7 +33,7 @@
 </head>
 <body>
     <div class="reveal default center" data-transition-speed="default" data-background-transition="default">
-        <a class="home_link" href="../../../agenda/beginners.html#HTML5_input_forms"><i class="fa fa-home"></i></a>
+        <a class="home_link" href="../../../agenda/beginners.html#HTML5_input_forms" target="_top"><i class="fa fa-home"></i></a>
         <div class="footer theme_switch">
             <a href="#" onclick="document.getElementById('theme').setAttribute('href','../../../../outfit/reveal.js/css/theme/white.css'); return false;">White</a>
             <a href="#" onclick="document.getElementById('theme').setAttribute('href','../../../../outfit/reveal.js/css/theme/league.css'); return false;">League</a>
