--- a/pages/agenda/advanced.html
+++ b/pages/agenda/advanced.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="../../outfit/css/master.css">
     <link rel="stylesheet" type="text/css" href="../../outfit/css/agenda.css">
 </head>
-<body onload="calcTotalHours();showAllNodes( document.getElementsByClassName('iep_syllabus_sub_themes') );" class="background">
+<body onload="calcTotalHours();hideAllNodes( document.getElementsByClassName('iep_syllabus_sub_themes') );" class="background">
 <header>
     <h2>HTML, CSS, JavaScript</h2>
     <h3><a href="../../index.html">WebDesign/Front-end Dev Course</a></h3>
