--- a/pages/themes/beginners/HTML_Bases/HTML_Bases.html
+++ b/pages/themes/beginners/HTML_Bases/HTML_Bases.html
@@ -7,10 +7,10 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
     <!-- css & themes include -->
-    <link rel="stylesheet" href="../../../../outfit/reveal.js/css/reveal.css">
-    <link rel="stylesheet" href="../../../../outfit/reveal.js/css/theme/moon.css" id="theme">
+    <link rel="stylesheet" href="/ProgressBG/outfit/reveal.js/css/reveal.css">
+    <link rel="stylesheet" href="/ProgressBG/outfit/reveal.js/css/theme/league.css" id="theme">
     <!-- Code syntax highlighting -->
-    <!-- <link rel="stylesheet" href="../../../../outfit/reveal.js/lib/css/zenburn.css"> -->
+    <!-- <link rel="stylesheet" href="/ProgressBG/outfit/reveal.js/lib/css/zenburn.css"> -->
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.1.0/styles/obsidian.min.css">
     <!--DARK:  tomorrow-night/monokai-sublime/obsidian/tomorrow-night-eighties/ -->
     <!-- LIGHT:tomorrow/ -->
@@ -19,29 +19,29 @@
         var link = document.createElement( 'link' );
         link.rel = 'stylesheet';
         link.type = 'text/css';
-        link.href = window.location.search.match( /print-pdf/gi ) ? '../../../../outfit/reveal.js/css/print/pdf.css' : '../../../../outfit/reveal.js/css/print/paper.css';
+        link.href = window.location.search.match( /print-pdf/gi ) ? '/ProgressBG/outfit/reveal.js/css/print/pdf.css' : '/ProgressBG/outfit/reveal.js/css/print/paper.css';
         document.getElementsByTagName( 'head' )[0].appendChild( link );
     </script>
     <!--[if lt IE 9]>
     <script src="lib/js/html5shiv.js"></script>
     <![endif]-->
     <!-- custom -->
-    <link rel="stylesheet" href="../../../../outfit/css/reveal.js.css">
+    <link rel="stylesheet" href="/ProgressBG/outfit/css/reveal.js.css">
     <base target="_blank">
 </head>
 <body>
     <div class="reveal default center" data-transition-speed="default" data-background-transition="default">
         <a class="home_link" href="../../../agenda/beginners.html#HTML_Bases" target="_top"><i class="fa fa-home"></i></a>
         <div class="footer theme_switch">
-            <a href="#" onclick="document.getElementById('theme').setAttribute('href','../../../../outfit/reveal.js/css/theme/white.css'); return false;">White</a>
-            <a href="#" onclick="document.getElementById('theme').setAttribute('href','../../../../outfit/reveal.js/css/theme/league.css'); return false;">League</a>
-            <a href="#" onclick="document.getElementById('theme').setAttribute('href','../../../../outfit/reveal.js/css/theme/sky.css'); return false;">Sky</a>
-            <a href="#" onclick="document.getElementById('theme').setAttribute('href','../../../../outfit/reveal.js/css/theme/beige.css'); return false;">Beige</a>
-            <a href="#" onclick="document.getElementById('theme').setAttribute('href','../../../../outfit/reveal.js/css/theme/simple.css'); return false;">Simple</a>
-            <a href="#" onclick="document.getElementById('theme').setAttribute('href','../../../../outfit/reveal.js/css/theme/serif.css'); return false;">Serif</a>
-            <a href="#" onclick="document.getElementById('theme').setAttribute('href','../../../../outfit/reveal.js/css/theme/night.css'); return false;">Night</a>
-            <a href="#" onclick="document.getElementById('theme').setAttribute('href','../../../../outfit/reveal.js/css/theme/moon.css'); return false;">Moon</a>
-            <a href="#" onclick="document.getElementById('theme').setAttribute('href','../../../../outfit/reveal.js/css/theme/solarized.css'); return false;">Solarized</a>
+            <a href="#" onclick="document.getElementById('theme').setAttribute('href','/ProgressBG/outfit/reveal.js/css/theme/white.css'); return false;">White</a>
+            <a href="#" onclick="document.getElementById('theme').setAttribute('href','/ProgressBG/outfit/reveal.js/css/theme/league.css'); return false;">League</a>
+            <a href="#" onclick="document.getElementById('theme').setAttribute('href','/ProgressBG/outfit/reveal.js/css/theme/sky.css'); return false;">Sky</a>
+            <a href="#" onclick="document.getElementById('theme').setAttribute('href','/ProgressBG/outfit/reveal.js/css/theme/beige.css'); return false;">Beige</a>
+            <a href="#" onclick="document.getElementById('theme').setAttribute('href','/ProgressBG/outfit/reveal.js/css/theme/simple.css'); return false;">Simple</a>
+            <a href="#" onclick="document.getElementById('theme').setAttribute('href','/ProgressBG/outfit/reveal.js/css/theme/serif.css'); return false;">Serif</a>
+            <a href="#" onclick="document.getElementById('theme').setAttribute('href','/ProgressBG/outfit/reveal.js/css/theme/night.css'); return false;">Night</a>
+            <a href="#" onclick="document.getElementById('theme').setAttribute('href','/ProgressBG/outfit/reveal.js/css/theme/moon.css'); return false;">Moon</a>
+            <a href="#" onclick="document.getElementById('theme').setAttribute('href','/ProgressBG/outfit/reveal.js/css/theme/solarized.css'); return false;">Solarized</a>
         </div>
         <div class="slides">
 <!--
@@ -57,7 +57,7 @@
         </div>
         <div class="company">
             <a href="http://progressbg.net/kurs-po-web-design/">
-            <img style="height:80%" src="../../../../outfit/images/logos/ProgressBG_logo_529_127.png">
+            <img style="height:80%" src="/ProgressBG/outfit/images/logos/ProgressBG_logo_529_127.png">
             </a>
         </div>
         <div class="author">
@@ -80,7 +80,6 @@
     </section>
 </section>
 <section><h2>Структура на HTML документ</h2>
-    <section><h2>Структура на HTML документ.</h2></section>
     <section>
         <pre><code>
 &lt;!DOCTYPE html&gt;   <!-- Информация за езика и версията на документа -->
@@ -269,8 +268,8 @@
 
     </section>
 </section>
-<section data-background="../../../../outfit/images/for_slides/the_end_on_sand.jpg">
-    <!-- <img class="the_end" src="../../../../outfit/images/for_slides/the_end_on_sand.jpg"> -->
+<section data-background="/ProgressBG/outfit/images/for_slides/the_end_on_sand.jpg">
+    <!-- <img class="the_end" src="/ProgressBG/outfit/images/for_slides/the_end_on_sand.jpg"> -->
 </section>
 <!--
 ########################################################
@@ -280,8 +279,8 @@
         </div>
     </div>
     <!-- external scripts -->
-    <script src="../../../../outfit/reveal.js/lib/js/head.min.js"></script>
-    <script src="../../../../outfit/reveal.js/js/reveal.js"></script>
+    <script src="/ProgressBG/outfit/reveal.js/lib/js/head.min.js"></script>
+    <script src="/ProgressBG/outfit/reveal.js/js/reveal.js"></script>
     <!-- init reveal -->
     <script>
         // Full list of configuration options available at:
@@ -305,12 +304,12 @@
             // transition: Reveal.getQueryHash().transition || 'default'
             // Optional reveal.js plugins
             dependencies: [
-                { src: '../../../../outfit/reveal.js/lib/js/classList.js', condition: function() { return !document.body.classList; } },
-                { src: '../../../../outfit/reveal.js/plugin/markdown/marked.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
-                { src: '../../../../outfit/reveal.js/plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
-                { src: '../../../../outfit/reveal.js/plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
-                { src: '../../../../outfit/reveal.js/plugin/zoom-js/zoom.js', async: true },
-                { src: '../../../../outfit/reveal.js/plugin/notes/notes.js', async: true }
+                { src: '/ProgressBG/outfit/reveal.js/lib/js/classList.js', condition: function() { return !document.body.classList; } },
+                { src: '/ProgressBG/outfit/reveal.js/plugin/markdown/marked.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
+                { src: '/ProgressBG/outfit/reveal.js/plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
+                { src: '/ProgressBG/outfit/reveal.js/plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
+                { src: '/ProgressBG/outfit/reveal.js/plugin/zoom-js/zoom.js', async: true },
+                { src: '/ProgressBG/outfit/reveal.js/plugin/notes/notes.js', async: true }
             ]
         });
     </script>
