CSS_Visual_Formating_Model

--- a/pages/themes/beginners/CSS_Selectors_1/CSS_Selectors_part1.html
+++ b/pages/themes/beginners/CSS_Selectors_1/CSS_Selectors_part1.html
@@ -52,6 +52,9 @@
         .html_block .child{
             background: #3030aa; /*green*/
         }
+        #purple{
+            color: purple;
+        }
     </style>
 </head>
 <body>
