--- a/pages/readings/beginners/UsefulResources.html
+++ b/pages/readings/beginners/UsefulResources.html
@@ -21,20 +21,20 @@
         <ul>
             <li><h2>Справочници, самоучители</h2>
                 <ul>
-                    <li><h3>Online References</h3>
+                    <li id="Online_References"><h3>Online References</h3>
                         <ol>
                         <li><a class="beg" href="http://www.w3schools.com/">w3schools</a><span>справочници + самоучители за повечето съвременни Уеб Технологии.</span></li>
                         <li><a class="adv" href="https://developer.mozilla.org/en-US/docs/Web">Mozilla Web technology for developers</a><span>изключително пълни и същевременно сбито представени справочници от Mozilla.</span></li>
                         </ol>
                     </li>
-                    <li><h3>Online Tutorials</h3>
+                    <li id="Online_Tutorials"><h3>Online Tutorials</h3>
                         <ol>
                         <li><a href="http://learn.shayhowe.com/html-css/">Learn to Code HTML & CSS</a><span>добре структурирани и представени уроци, оособени в два радела: Beginners и Advanced.Съдържанието почти отговаря на книгата: "Learn to Code HTML & CSS the Book" от същия автор.</span></li>
                         <li><a href="http://www.tutorialrepublic.com/">TutorialRepublic - Learn the essentials of web development and build your own website.</a><span>пълни, добре обяснени (с примери), тематично подредени справочници.</span></li>
                         <li><a href="http://www.tutorialspoint.com/web_development_tutorials.htm">TutorialsPoint - Web Tutorials</a><span>подобен на горния, но обхващащ повече теми свързани с Уеб програмиране.</span></li>
                         </ol>
                     </li>
-                    <li><h3>coursera.org - безплатни (без сертификата) курсове от водещи университети</h3>
+                    <li id="coursera"><h3>coursera.org - безплатни (без сертификата) курсове от водещи университети</h3>
                     <ol>
                         <li><a href="https://www.coursera.org/learn/introcss">Introduction to CSS3 - University of Michigan</a></li>
                         <li><a href="https://www.coursera.org/learn/html">Introduction to HTML5 - University of Michigan</a></li>
@@ -43,7 +43,7 @@
                         <li>и много други курсове поместени в <a href="https://www.coursera.org/">coursera.org</a> </li>
                     </ol>
                     </li>
-                    <li><h3>youtube channels</h3>
+                    <li id="youtube_channels"><h3>youtube channels</h3>
                         <ol>
                         <li><a href="https://www.youtube.com/user/DevTipsForDesigners">DevTips For Designers</a><span>изключително професионално направен канал (зад него стой цял екип), с избилие от уроци за начинаещи и напреднали. Обхваща почти всички съвременни тенденции в Уеб дизайна и Front-End програмирането.</span></li>
                         <li><a href="https://www.youtube.com/user/LearnWebCode">LearnWebCode</a><span>също професионално създаден канал, добре структуриран.</span></li>
@@ -51,21 +51,21 @@
                     </li>
                 </ul>
             </li>
-            <li><h2>Online WebDev Tools</h2>
+            <li id="Online_WebDev_Tools"><h2>Online WebDev Tools</h2>
                 <ul>
-                    <li><h3>Code validators</h3>
+                    <li id="Code_validators"><h3>Code validators</h3>
                         <ol>
                             <li><a class="beg" href="https://validator.w3.org/">HTML validator</a><span>HTML (и не само) валидатор на W3C.</span></li>
                             <li><a class="beg" href="https://jigsaw.w3.org/css-validator/">CSS validator</a><span>CSS валидатор от W3C.</span></li>
                         </ol>
                     </li>
-                    <li><h3>Browsers support</h3>
+                    <li id="Browsers_support"><h3>Browsers support</h3>
                         <ol>
                             <li><a class="adv" href="http://caniuse.com/">caniuse.com</a><span>бързо и лесно можете да проверите какво от HTML/CSS/JS се поддържа от различните браузъри.</span></li>
                             <li><a href="http://www.quirksmode.org/">quirksmode.org</a><span>с една дума: класика!</span></li>
                         </ol>
                     </li>
-                    <li><h3>Online CSS tools</h3>
+                    <li id="Online_CSS"><h3>Online CSS tools</h3>
                         <ol>
                             <li><a class="beg" href="http://www.cssmatic.com/">The ultimate CSS tools for web designers</a></li>
                             <li><a class="beg" href="http://enjoycss.com/">EnjoyCSS: Online CSS3 Code Generator With a Simple Graphical Interface</a></li>
@@ -73,12 +73,19 @@
                             <li><a class="beg" href="http://westciv.com/tools/video/"></a></li>
                         </ol>
                     </li>
+                    <li id="Colour_pallets"><h3>Colour pallets generators</h3>
+                        <ol>
+                            <li><a class="beg" href="https://coolors.co/browser">coolors.co</a><span>The super fast color schemes generator!</span></li>
+                            <li><a class="beg" href="http://www.colourlovers.com/">colourlovers.com</a><span>COLOURlovers: Color Trends + Palettes</span></li>
+                            <li><a class="beg" href="http://vhue.co/">vhue.co</a><span>Vhue - Color Palettes, Moodboards, Design Inspiration</span></li>
+                        </ol>
+                    </li>
                 </ul>
             </li>
             <li><h2>Свободни за използване ресурси</h2>
                 <ul>
                     <li><a id="CC_main_search" href="https://search.creativecommons.org/">CC Search - Creative Commons</a><span>портал за търсене, който предлага удобен интерфейс към Google, Youtube, Flickr, и др. за търсене на съдържание публикувано под CreativeCommon(CC)</span></li>
-                    <li><h3>Изображения</h3>
+                    <li id="Images"><h3>Изображения</h3>
                         <ol>
                             <li><a class="beg" href="http://lorempixel.com/">lorempixel.com - placeholder Images for every case</a><span>когато просто ви трябват "някакви картинки" с даден размер, за да тествате дизайна на сайта.</span></li>
                             <li><a class="beg" href="https://pixabay.com/">pixabay.com - free high-quality images</a><span>богата колекция от качествени фотографии. С една от най-добрите вградени търсачки - може да търсите снимки по <i>категория</i>, <i>размер</i>, <i>цвят</i> и пр.</span></li>
@@ -86,14 +93,14 @@
                             <li><a class="adv" href="http://www.creativebloq.com/graphic-design/best-places-free-vector-art-1012985">Article: The 14 best places to find free vector art online</a><span>ако се интересувате къде може да намерите свободни за употреба векторни графики(SVG)</span></li>
                         </ol>
                     </li>
-                    <li><h3>Videos</h3>
+                    <li id="Videos"><h3>Videos</h3>
                         <ol>
                             <li><a class="beg" href="https://vimeo.com/creativecommons">Browse the Creative Commons licensed videos on Vimeo</a><span>файловете във <a href="https://vimeo.com/">vimeo</a>, подредени според различните CC лицензи.</span></li>
                             <li><a class="beg" href="https://www.youtube.com/">youtube.com</a> и др.<span>посочете във филтъра при търсенето "CreativeCommons" (или използвайте търсачката: <a href="https://search.creativecommons.org/">CC Search - Creative Commons</a>)</span></li>
                             <li><a href="http://www.coverr.co/">coverr.co</a><span>качествени, структурирани в категории видео клипове, който можете свободно да използвате за фон на вашата страница.</span></li>
                         </ol>
                     </li>
-                    <li><h3>Икони, символи, шрифтове</h3>
+                    <li id="icons_symbols_fonts"><h3>Икони, символи, шрифтове</h3>
                         <ol>
                             <li><a class="beg" href="http://www.copypastecharacter.com/">CopyPasteCharacter.com</a><span>ако се налага да вмъкнете специален символ (от цялата unicode таблица) във вашата страница - това е най-лесният и удобният начин.</span></li>
                             <li><a href="https://fortawesome.github.io/Font-Awesome/icons/">Font-Awesome Icons</a><span>официлания сайт в github. Показани са всички икони предлагани от <a href="https://fortawesome.github.io/Font-Awesome/">Font-Awesome</a></span></li>
@@ -123,7 +130,7 @@
             </li>
             <li><h2>Тематични публикации</h2>
                 <ul>
-                    <li><h3>HTML/CSS Layouts</h3>
+                    <li id="HTML_CSS_Layouts"><h3>HTML/CSS Layouts</h3>
                         <ul>
                             <li><h4>Two columns layout</h4>
                                 <ol>
@@ -138,7 +145,7 @@
                             </li>
                         </ul>
                     </li>
-                    <li><h3>CSS Box Model & Positioning</h3>
+                    <li id="CSS_Box_Model_and_Positioning"><h3>CSS Box Model & Positioning</h3>
                         <ol>
                             <li><a href="http://vanseodesign.com/css/css-positioning/">How Well Do You Understand CSS Positioning?</a><span>изчерпателен и добре обяснен материал обхващащ схемите за позизиониране в CSS.</span></li>
                         </ol>
