--- a/pages/themes/beginners/CSS_Visual_Formating_Model/CSS_Visual_Formating_Model.html
+++ b/pages/themes/beginners/CSS_Visual_Formating_Model/CSS_Visual_Formating_Model.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>cliche</title>
+    <title>CSS_Visual_Formating_Model</title>
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
@@ -25,8 +25,9 @@
     <!--[if lt IE 9]>
     <script src="lib/js/html5shiv.js"></script>
     <![endif]-->
-    <!-- custom -->
+    <!-- CUSTOM -->
     <link rel="stylesheet" href="/ProgressBG/outfit/css/reveal.js.css">
+    <link rel="stylesheet" type="text/css" href="/ProgressBG/outfit/css/custom_hljs.css">
     <base target="_blank">
 </head>
 <body>
@@ -49,7 +50,7 @@
 ##################### SLIDES START #####################
 ########################################################
 -->
-<section><h1>PresentationTitile</h1></section>
+<section><h1>Да излезем от кутията или как браузърът подрежда HTML елементите.</h1></section>
 <section data-transition="zoom">
     <div class="copyright">
         <div class="note">
@@ -67,9 +68,81 @@
     </div>
 </section>
 
-<section><h2>SectionTitle</h2>
+<section><h2>Накратко за Visual Formatting Model</h2>
     <section>
+        <h3>Visual Formatting Model - алгоритъма, който браузерите използват за да визуализират HTML елементите.</h3>
+    </section>
+    <section>
+        <p>Изобразяването и подреждането на елементите, най-общо зависи от:</p>
+        <ul class="fa">
+            <li>Размера на кутийката, която представлява елемента.</li>
+            <li>Типа на елемента (inline, block)</li>
+            <li>Схемата за позициониране ( normal flow/ float /absolute )</li>
+            <li>Останалите елементи в HTML  дървото.</li>
+            <li>Размерът и позицията на viewport-a.</li>
+        </ul>
+    </section>
+</section>
 
+<section><h2>Свойство display</h2>
+    <section><p>Задава типа на кутийката, в която ще се изобрази HTML елементът.</p>
+    <pre><code rel=CSS class="tab3">
+    div.left_column {
+        display: inline-block;
+    }
+    </code></pre>
+    </section>
+    <section><h2>Основни стойности</h2>
+        <ul class="fa">
+            <li><strong>display: none</strong> - елементът не се показва и не заема място в документа.</li>
+            <li><strong>display: inline:</strong> - елементът се интерпретира като поредов елемент</li>
+            <li><strong>display: block:</strong> - елементът се интерпретира като блоков елемент</li>
+            <li><strong>display: inline-block:</strong> - елементът се интерпретира като поредов елемент, на които могат да се задават размери (width, height)</li>
+        </ul>
+        <p>Всички стойности: <a href="http://www.w3schools.com/cssref/pr_class_display.asp">w3schools - CSS display Property</a></p>
+    </section>
+</section>
+
+<section><h2>Свойство position</h2>
+    <section><p>Задава начинът (схемата) за позициониране на елемента.</p>
+        <pre><code rel=CSS class="tab3">
+        div.left_column{
+            position: absolute;
+            left: 0;
+        }
+        </code></pre>
+    </section>
+    <section><h3>Основни схеми за позициониране</h3>
+        <ul class="fa">
+            <li><strong>static</strong>: Елементите се подреждат по реда на срещането им в HTML стуктурата. Това е нормалната (default) схема за позициониране.</li>
+            <li><strong>relative</strong>: Елементите се подреждат относително спрямо нормалната схема за позициониране. Отчитат се стойностите за top, right, bottom и left.</li>
+            <li><strong>fixed</strong>: Елементът се „изваждат“ от нормалната схема и се позиционира <i>относително спрямо прозореца на браузера (viewport)</i>.</li>
+            <li><strong>absolute</strong>: Елементът се „изваждат“ от нормалната схема и се позиционира относително <i>спрямо най-прекият си предшественик, който е позициониран</i> – т.е. има зададено свойство postion различно от static.</li>
+        </ul>
+    </section>
+</section>
+
+<section><h2>Свойство float</h2>
+    <section><p>Употреба:</p><br>
+        <div>
+            <img src="http://lorempixel.com/400/200/animals/" style="float: right;">
+            <p style="text-align: left">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+    </section>
+    <section>Чрез <b>float</b> съдържанието на следващия/предходния елемент ще се „обтича“ в дясно/ляво от въпросния елемент.</section>
+    <section><h3>Стойности за float</h3>
+        <ul class="fa">
+            <li><b>float: left</b> - елементът се подрежда най-вляво на текущия ред, а следващият го елемент се подрежда плътно вдясно до него.</li>
+            <li><b>float: right</b> - елементът се подрежда най-вдясно на текущия ред, а следващият го елемент се подрежда плътно вляво до него.</li>
+        </ul>
+    </section>
+    <section>
+        <p>NB! При дизайна на layout се предпочита употребата на display: flex; (за съвременните браузери)</p>
     </section>
 </section>
 
