CSS_Visual_Formating_Model

--- a/pages/themes/beginners/CSS_Visual_Formating_Model/CSS_Visual_Formating_Model.html
+++ b/pages/themes/beginners/CSS_Visual_Formating_Model/CSS_Visual_Formating_Model.html
@@ -134,7 +134,8 @@
             proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </div>
     </section>
-    <section>Чрез <b>float</b> съдържанието на следващия/предходния елемент ще се „обтича“ в дясно/ляво от въпросния елемент.</section>
+    <section>Чрез <b>float</b> съдържанието на следващия/предходния елемент ще се „обтича“ в дясно/ляво от въпросния елемент. Елементите със свойство float се изваждат от нормалната схема за позициониране!
+    </section>
     <section><h3>Стойности за float</h3>
         <ul class="fa">
             <li><b>float: left</b> - елементът се подрежда най-вляво на текущия ред, а следващият го елемент се подрежда плътно вдясно до него.</li>
