--- a/pages/themes/beginners/CSS_Visual_Formating_Model/CSS_Visual_Formating_Model.html
+++ b/pages/themes/beginners/CSS_Visual_Formating_Model/CSS_Visual_Formating_Model.html
@@ -125,7 +125,7 @@
 <section><h2>Свойство float</h2>
     <section><p>Употреба:</p><br>
         <div>
-            <img src="http://lorempixel.com/400/200/animals/" style="float: right;">
+            <img src="images/seagull-623520_640.jpg" height="300" style="float: right;">
             <p style="text-align: left">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
             tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
             quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
