--- a/pages/themes/beginners/CSS_Selectors_1/examples/type_selectors_example.html
+++ b/pages/themes/beginners/CSS_Selectors_1/examples/type_selectors_example.html
@@ -8,7 +8,7 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.2.0/languages/css.min.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
     <link rel="stylesheet" type="text/css" href="/ProgressBG/outfit/css/lessons/code_preview.css">
-    <link rel="stylesheet" type="text/css" href="/ProgressBG/outfit/css/custom_hljs.css">
+    <!-- <link rel="stylesheet" type="text/css" href="/ProgressBG/outfit/css/custom_hljs.css"> -->
     <link rel="shortcut icon" href="/images/WebDesignDourseLogo_16_16.png"/>
 </head>
 <body>
