--- a/pages/themes/beginners/_cliches/slides_examples.html
+++ b/pages/themes/beginners/_cliches/slides_examples.html
@@ -4,13 +4,11 @@
     <meta charset="UTF-8">
     <title>slides_examples.html</title>
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.2.0/styles/tomorrow-night-eighties.min.css">
-    <!-- <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.1.0/styles/codepen-embed.min.css"> -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.2.0/highlight.min.js"/>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.2.0/languages/css.min.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
     <link rel="stylesheet" type="text/css" href="/ProgressBG/outfit/css/lessons/code_preview.css">
-    <link rel="stylesheet" type="text/css" href="/ProgressBG/outfit/css/custom_hljs.css">
-   <!--  <link rel="shortcut icon" href="/images/WebDesignDourseLogo_16_16.png"/> -->
+    <!-- <link rel="stylesheet" type="text/css" href="/ProgressBG/outfit/css/custom_hljs.css"> -->
 </head>
 <body>
     <div class="page">
