--- a/pages/agenda/beginners.html
+++ b/pages/agenda/beginners.html
@@ -139,7 +139,7 @@
                 <li>Стойности за цветове.</li>
             </ol>
         </li>
-        <li><h3><a class="nonactive" href="../themes/slides/how_a_web_site_works.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down">Да влезем в кутията или the CSS box model.</span><span class="hours">2</span></h3>
+        <li><h3><a class="active" href="/ProgressBG/pages/themes/beginners/CSS_Box_Model/CSS_Box_Model.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down">Да влезем в кутията или the CSS box model.</span><span class="hours">2</span></h3>
             <ol class="iep_syllabus_sub_themes">
                 <li>HTML елементът разгледан като кутийка.</li>
                 <li>Основни CSS свойства за оразмеряване на "кутийките".</li>
