--- a/pages/agenda/beginners.html
+++ b/pages/agenda/beginners.html
@@ -133,7 +133,7 @@
                 <li>Запознаване с основните CSS свойства за оформление на текст, шрифт, цвят, фон и рамка.</li>
             </ol>
         </li>
-        <li><h3><a class="nonactive" href="../themes/slides/how_a_web_site_works.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down">Мерни еденици в CSS3</span><span class="hours">2</span></h3>
+        <li><h3><a class="nonactive" href="#" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down">Мерни еденици в CSS3</span><span class="hours">2</span></h3>
             <ol class="iep_syllabus_sub_themes">
                 <li>Абсолютни и релативни мерни единици.</li>
                 <li>Стойности за цветове.</li>
