MySQL course link

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 </header>
 <article class="main">
     <p><a href="http://wwwcourses.github.io/ProgressBG-Front-End-Dev/">WebDesin (HTML/CSS/JS)</a></p>
-    <!-- <p><a href="http://wwwcourses.github.io/ProgressBG-MySQL/">MySQL</a> -->
+    <p><a href="http://wwwcourses.github.io/ProgressBG-MySQL/">MySQL</a>
     </p>
 </article>
 <footer class="footer"><div class="license">
